--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <!DOCTYPE HTML>
 <html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>anna laura </title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h2>oi,este é me ssite</h2>
+<div class="inicio">
+    <div class="foto">
+        <img src="cbjr.jpg " alt="Foto">
+
+    </div>
+    <div class="infos">
+        <h1>Anna Laura</h1>
+        <h2>estudante</h2>
+        <p>Telefone: 31984543167</p>
+        <p>Email: analaurafh22@gmail.com </p>
+        <p>Endereço: Ouro Branco,mg</p>
+        <div class="redes-sociais">
+            <a href="https://instagram.com/anna_laurxy"><i class="bx bxl-instagram"></i></a>
+            <a href="https://tiktok.com/@ana.merrcesn444"><i class="bx bxl-tiktok"></i></a>
+            
+
+        </div>
+
+    </div>
+</div>
+<div class="sobre"></div>   
+<div class="experiencias"></div>
+<footer></footer>
 </body>
 </html>
