--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 </div>
 <div class="sobre"></div>   
 <div class="experiencias"></div>
-<footer></footer>
+<footer>
+    <p>Feito por Ana Laura </p>
+</footer>
 </body>
 </html>
