--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         <div class="social">
             <a href="https://instagram.com/anna_laurxy"><i class="bx bxl-instagram"></i></a>
             <a href="https://tiktok.com/ana.merrcesn444"><i class="bx bxl-tiktok"></i></a>
-            <a href="https://pinterest.com/annaannamerces"><i class="bx bxl-pinterest></i></a>           
-            
-            
+            <a href="https://pinterest.com/annaannamerces"><i class="bx bxl-pinterest"></i></a>           
 
         </div>
 
