--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
 
     </div>
 </div>
-<div class="sobre"></div>   
-<div class="experiencias"></div>
+<div class="sobre">
+    <h1>um pouco sobre mim</h1>
+    <p> Adoro jogar vôlei e andar de skate</p>
+</div>   
+<div class="experiencias">
+    <h1>Minhas Experiências</h1>
+    <p>sou estudante do 9º ano do colégio João XXIII</p>
+</div>
 <footer>
     <p>Feito por Ana Laura </p>
 </footer>
